Removed IntelliJ encodings file.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ target/
 .idea/dictionaries
 .idea/compiler.xml
 .idea/codeStyleSettings.xml
+.idea/encodings.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
