--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ target/
 *.iml
 
 ## Directory-based project format:
-# .idea/
+.idea/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
